# glowing-doodle

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py
argo/jobs/: Dockerfile  backfill_transcriptions.py  generate_report.py  requirements.txt  score_calls.py
argo/workflows/: call-scoring-batch.yaml  daily-analytics.yaml  weekly-report.yaml
business-use-cases/: ARCHITECTURE_DESIGN.md  BUSINESS_CASE_ASSUMPTIONS.md  BUSINESS_CASE_QUESTIONNAIRE.md  BUSINESS_USE_CASES_FAQ.md  COMPETITOR_COMPARISON.md  README.md  VENDOR_COMPARISON_CLICK2DASH_VS_OLELO.md
helm/call-intelligence/: Chart.yaml  values-prod.yaml  values-staging.yaml  values.yaml
helm/call-intelligence/templates/: _helpers.tpl  api-gateway-deployment.yaml  api-gateway-service.yaml  call-handler-deployment.yaml  hpa.yaml  (+9 more)
scripts/: init_db.py  seed_shops.py  twilio_setup.py
services/api-gateway/: Dockerfile  requirements.txt
services/call-handler/: Dockerfile  requirements.txt
services/dashboard/: index.html  nginx.conf  package.json  tailwind.config.js
services/voice-agent/: Dockerfile  requirements.txt
services/workers/: Dockerfile  requirements.txt
shared/: __init__.py  auth.py  config.py  database.py  storage.py  utils.py
shared/models/: __init__.py  call.py  call_metrics.py  call_participant.py  phone_number.py  playbook.py  shop.py  user.py
shared/schemas/: __init__.py  analytics.py  call.py  common.py  playbook.py  shop.py
(+44 files in other folders)
